--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+autopep8==1.5.2
 click==7.1.2
 Flask==1.1.2
 Flask-Login==0.5.0
@@ -7,6 +8,8 @@ gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+psycopg2==2.8.5
+pycodestyle==2.6.0
 SQLAlchemy==1.3.17
 Werkzeug==1.0.1
 WTForms==2.3.1
